# tomocupy

./: .dockerignore  .gitignore  CMakeLists.txt  Containerfile  Dockerfile  README.rst  apptainer.def  pyproject.toml  setup.py
docs/source/: container.rst  index.rst  install.rst
src/tomocupy/: config.py  find_center.py
src/tomocupy/dataio/: writer.py
tests/cmds/: sample.podman.cmd  sample.uv.cmd
